# ekart

./: .pre-commit-config.yaml  Dockerfile  LICENSE  aws_credential_compose.sh  docker-compose.yml  pyproject.toml
.cicd/include/: run-migrations.py
src/ekart_inventory_api/: alembic.ini  main.py  workers.py
src/ekart_inventory_api/config/: database_config.py
src/ekart_inventory_api/core/controllers/: dependencies.py  manage_cache_dependency.py
src/ekart_inventory_api/core/controllers/products/: product_management.py
src/ekart_inventory_api/core/models/: __init__.py
src/ekart_inventory_api/core/models/products/: products.py
src/ekart_inventory_api/migrations/: env.py  utils.py
src/ekart_inventory_api/routers/: __init__.py  products.py
src/ekart_inventory_api/settings/: config.py  settings.toml
src/ekart_inventory_api/utils/auth/: auth_token_decoder.py  decorator.py
src/ekart_inventory_api/utils/aws/: aws_client.py  lambda.py  s3.py
src/ekart_inventory_api/utils/database/: connections.py  session_context_manager.py
src/ekart_inventory_api/utils/user/: user.py
